Closed Bug 1903047 Opened 2 years ago Closed 2 years ago

Perma Late Beta REFTEST TEST-UNEXPECTED-FAIL | dom/media/test/reftest/uneven_frame_duration_video.html == dom/media/test/reftest/uneven_frame_duration_video-ref.html | when Gecko 129 switches from Early Beta to Late Beta on 2024-07-19

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

VERIFIED FIXED
129 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox127 --- unaffected
firefox128 --- unaffected
firefox129 + verified

People

(Reporter: smolnar, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central as Late Beta simulation

How to run these simulations

Failure log

OAD | file:///D:/task_171862308063301/build/tests/reftest/tests/dom/media/test/reftest/uneven_frame_duration_video-ref.html | 8 / 12 (66%)
[task 2024-06-17T12:10:31.810Z] 12:10:31     INFO - REFTEST INFO | REFTEST fuzzy test (0, 0) <= (174, 767322) <= (84, 774213)
[task 2024-06-17T12:10:34.186Z] 12:10:34     INFO - REFTEST TEST-UNEXPECTED-FAIL | dom/media/test/reftest/uneven_frame_duration_video.html == dom/media/test/reftest/uneven_frame_duration_video-ref.html | image comparison, max difference: 174, number of differing pixels: 767322
[task 2024-06-17T12:10:34.189Z] 12:10:34     INFO - REFTEST   IMAGE 1 (TEST): data
INFO - REFTEST   IMAGE 2 (REFERENCE)
INFO - REFTEST TEST-END | dom/media/test/reftest/uneven_frame_duration_video.html == dom/media/test/reftest/uneven_frame_duration_video-ref.html
[task 2024-06-17T12:10:34.192Z] 12:10:34     INFO - REFTEST TEST-START | dom/media/test/reftest/frame_order_mp4.html == dom/media/test/reftest/frame_order_mp4-ref.html
Flags: needinfo?(cchang)

Hi Sandor, How do you find out if this failure is caused by patches in bug 1902351? I am not able to locate which patch causes the issue by mozregression since the test works expectedly in Nightly. In addition, the LATE BETA simulation on top of Bug 1902157's patches is green.

Flags: needinfo?(cchang) → needinfo?(smolnar)

I will include the backout of bug 1902351 in the today's simulation to see if that is the culprit.
(Edit) I tried to backout bug 1902351 but I can't do that because it has some dependencies in the other bugs in that push: https://hg.mozilla.org/integration/autoland/pushloghtml?changeset=916a5b8267fccc4b0de2f6ad2426aefdb0fcc1f1) (I can't confirm which specific bug is the culprit for this if I can't back it out)

Flags: needinfo?(smolnar)

bug 1902351 landed comment changes. No way that regressed anything in the product.

No longer regressed by: 1902351

I think we'll wait for more current test data (closer to the merge).

Regressed by: 1889275

:sotaro, since you are the author of the regressor, bug 1889275, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(sotaro.ikeda.g)

I take the bug.

Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)

This failure might also be related

Likely unrelated: The reftest failure in this is cause by the content slightly shifted horizontally while the log in comment 8 is a green frame vs. the video rendered.

:sotaro, the Fx129 soft code freeze starts on Thursday 2024-07-04, ahead of Fx129 merging to beta on Monday 2024-07-08.
Do you plan on landing a fix this week?

Flags: needinfo?(sotaro.ikeda.g)

I am going to create a patch and asking for review today.

Flags: needinfo?(sotaro.ikeda.g)

It seems necessary to wait ID3D11Query of before color conversion if the ID3D11Query exists in DXGITextureHostD3D11::GetAsSurfaceWithDevice() like Bug 1817617. Since the color conversion seems to use VideoProcessor internally.

See Also: → 1817617
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d138ac8c7ec9 Wait ID3D11Query of D3D11Texture2D copy complete before color conversion if ID3D11Query of DXGITextureHostD3D11 exists r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch

Verified fixed in today's central as beta sim

Status: RESOLVED → VERIFIED

Set release status flags based on info from the regressing bug 1889275

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: