Bug 1903047 - Wait ID3D11Query of D3D11Texture2D copy complete before color conversion if ID3D11Query of DXGITextureHostD3D11 exists r=gfx-reviewers,lsalzman

It is necessary to wait ID3D11Query of before color conversion if the ID3D11Query exists in DXGITextureHostD3D11::GetAsSurfaceWithDevice() like Bug 1817617. Since the color conversion seems to use VideoProcessor internally.

Differential Revision: https://phabricator.services.mozilla.com/D215580